--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,11 @@
 html * {
     font-family: centuma-thin;
 }
-body *:not(.light *) {
+body * {
     color: #ffffff;
+}
+.light {
+    color: #222222;
 }
 
 h1,
@@ -178,6 +181,11 @@ APPLY TO ALL IMAGES EXCEPT TITLE IMG
 
 /* = EVENTS PAGE
 -----------------------------------------------------------------------------*/
+
+#eventCalendar {
+    min-height: 600px;
+    min-height: 60vh;
+}
 
 .white-text {
 	color: white;
@@ -376,10 +384,12 @@ APPLY TO ALL IMAGES EXCEPT TITLE IMG
 	background-color: #C2D5EB;
 }
 
-.light * {
+.light {
 	background-color: #D9D9D9;
 }
-
+.light * {
+    color: #222222;
+}
 .dark-blue {
 	background-color: #1D324F;
 }
