--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,6 @@ body * {
     color: #ffffff;
 	z-index: 1;
 }
-.light {
-    color: #222222;
-}
 
 h1,
 h2,
@@ -115,6 +112,9 @@ h6 {
 /*Max image height preventing fullscreen images
 APPLY TO ALL IMAGES EXCEPT TITLE IMG
 */
+.thumbnail-height {
+	height: 10vw;
+}
 
 .image-max {
     max-height: 30vh;
@@ -160,7 +160,7 @@ APPLY TO ALL IMAGES EXCEPT TITLE IMG
 @media only screen and (min-width: 40.063em) {
 	.top-bar {
 		height: 6rem;
-		padding-top: 3rem;
+		padding-top: 2.9rem;
 		position: relative;
 	}
 	.social-icons {
@@ -174,7 +174,7 @@ APPLY TO ALL IMAGES EXCEPT TITLE IMG
 	}
 }
 
-@media only screen and (min-width: 40.063em) {
+@media only screen and (max-width: 40.063em) {
 	.social-icons {
 		top: -35px;
 	}
@@ -406,7 +406,9 @@ APPLY TO ALL IMAGES EXCEPT TITLE IMG
 
 .light {
 	background-color: #D9D9D9;
+
 }
+
 .dark-font * {
     color: #222222;
 }
