--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,12 @@ h6 {
 .margin-bottom-double {
     margin-bottom: 1.875rem;
 }
-
+.underline-black {
+	border-bottom: solid 1px black;
+}
+.underline-white {
+	border-bottom: solid white 1px;
+}
 /*Icon Font Styles in Footer*/
 
 .icon-font {
